# SDL_shader

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/SDL_shader/: SDL_shader.h
src/: SDL_shader.c  common.h  main.c  vector.c  vector.h
